LC - 131 - Refactoring